added features and minor bug fixed1